--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,11 @@
 :root {
   --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1)
 }
-
+/* .primera,
+.segunda,
+tercera{
+  display:none;
+} */
 * {
   padding: 0;
   margin: 0;
@@ -11,93 +15,86 @@
   text-transform: capitalize;
 }
 
-
+html{
+  overflow-x: hidden;
+  scroll-padding-top: 5.5rem;
+  scroll-behavior: smooth;
+}
 body {
   background-color: rgb(0, 214, 214);
   height: 100vh;
 }
-
 section:nth-child(even) {
   background-color: #000000;
 }
 
 header {
   width: 100%;
-  height: 100px;
+  padding: .6rem 0;
   display: flex;
   align-items: center;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
-  padding: 0 1%;
   background-color: rgb(0, 214, 214);
   box-shadow: var(--box-shadow);
   z-index: 3;
 }
-
-.container {
+.conteiner {
   height: 100vh;
   width: 95%;
   z-index: 2;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 
 /* navbar */
-
 .navbar-brand img {
-  width: 150px;
-  height: 100px;
-  object-fit: contain; 
+  width: 190px;
+  height: 140px;
+  position: fixed;
+  top:0;
+  left: 0;
 }
-
 .nav-link {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
 }
-
 .nav-link:hover {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
-
 .btn {
-  background-color: rgb(255, 184, 0) !important;
-  padding: 0 2.5rem !important;
-  border-radius: 1rem !important;
+  background-color: rgb(255, 184, 0);
+  width:120px;
+  border-radius: 1.5rem;
 }
 
 /* fin navbar */
 
-/* seccionprincipal */
-.container-principal{
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
 .circulo {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 80%;
-  padding-bottom: 50%;
-  overflow: hidden;
-  background-color: rgb(255, 184, 0);
-  clip-path: circle(50% at 100% 100%);
-  /* animation: circulo 2s linear infinite; */
-}
-
-.container .principalImagen {
+ position: absolute;
+ right: 0;
+ bottom: 0;
+ width: 100%;
+ padding-bottom: 50%;
+ overflow: hidden;
+ background-color: rgb(255, 184, 0);
+ clip-path: circle(35% at 100% 100%);
+} 
+/* seccionprincipal */
+.container-content{
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-top: 4rem;
+  justify-content: start;
+  width: 80%;
+  gap: 7rem;
 }
-
 .fondoImagen {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   background-color: rgba(148, 243, 255, 0.6);
-  border-radius: 12%;
+  border-radius: 3rem;
   transform: rotate(20deg);
   z-index: 1;
   animation: light 4s linear infinite;
@@ -105,11 +102,10 @@ header {
 
 .imagenBailarines {
   position: absolute;
-  width: 440px;
-  top: 1rem;
-  left: -4.5rem;
+  width:600px;
+  top:1rem;
+  left: -6.5rem;
   transform: rotate(-20deg);
-  border-radius: 10%;
   z-index: 2;
   background: transparent;
   transition: .5s;
@@ -118,162 +114,131 @@ header {
 .imagenBailarines:hover {
   transform: scaleX(-1)
 }
-
 .containerLetras {
   display: flex;
   flex-direction: column;
-  line-height: 1.1;
-  z-index: 2;
-}
-
-.botonBailes {
-  background-color: rgb(255, 184, 0);
-  padding: .3rem 1.5rem;
-  border-radius: 1rem;
-  width: 8rem;
-  color: black;
-  text-transform: uppercase;
+  line-height: 1.12;
 }
 
 .containerLetras h1 {
-  text-indent: -2.5rem;
   text-shadow: 3px 3px 4px rgba(255, 255, 255, 1);
-  font-size: 3rem;
+  font-size: 5rem;
 }
 
 .containerLetras p {
-  text-indent: 2rem;
-  font-size: 2rem;
+  text-indent: 3rem;
+  font-size: 4rem;
   color: white;
 }
 
 .containerLetras a {
-  text-align: center;
-  margin-left: -2.5rem;
-  margin-top: .1rem;
-  font-size: 1rem;
+  font-size: 1.4rem;
 }
 
 /* fin seccion principal */
 
 /* segunda seccion */
-.segunda {
-  text-align: center;
-  padding-top: 3rem;
+.conteiner-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  padding-top: 3rem;
+  gap: 1rem;
 }
 
 .content {
+  text-align: center;
   background-color: rgb(255, 255, 255);
-  width: 90%;
+  width: 70%;
   padding: 1.5rem 1rem;
-  border-radius: 12px;
-  line-height: 1.5;
+  border-radius: 2rem;
+  line-height: 1.3;
   color: #eee;
 }
 
-.segunda .content h3 {
-  font-size: 1.5rem;
-  color: rgba(0, 214, 214,1);
+.content h3 {
+  font-size: 2rem;
+  color: rgb(3, 145, 145);
 }
 
-.segunda .content h1 {
-  font-size: 3rem;
+.content h1 {
+  font-size: 3.5rem;
   color:#666;
 }
-.recuadroSecundario{
-  width:95%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .fondoImagenDos {
   width: 500px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  height:99vh;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-content: space-evenly;
+  justify-items: center;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 2rem;
   transform: rotate(70deg);
   background-color: rgba(148, 243, 255, 0.6);
   border-radius: 3rem;
   animation: light 4s linear infinite;
   z-index: 3;
+  gap:2rem;
 }
 .imagen {
   box-shadow: 0.3rem 0.3rem 0.4rem #454545;
   border-radius: .5rem;
   transform: rotate(-70deg);
-  width: 10rem;
-  height: 10rem;
+  width: 11rem;
+  height: 11rem;
 }
 
 /* fin segunda seccion */
 
-
-
 /* tercera seccion */
-.box{
-  width:50%;
-}
-.tituloh1 {
-  text-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.4);
-  font-size: 2.5rem;
-  background-color: #eee;
-  border-radius: 0.5vw;
-  padding: 0.5vw;
-  box-shadow: 0.4vw 0.4vw 0.4vw rgba(0, 0, 0, 0.6);
-  text-align: center;
-}
 
 .containerClases {
+  height: 100vh;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  border: 2px solid white;
-  margin: 0 0.5vw 4vw 0.5vw;
-  border-radius: 1vw;
-  background-color: black;
+  margin: 0 auto;
+  border-radius: 3rem;
+  justify-items: center;
+  align-items: center;
+  width:95%;
 }
 
 .item {
-  padding: 3rem;
+  width:400px;
+  height: 450px;
   background-color: rgba(148, 243, 255, 1);
-  border-radius: 1vw;
-  margin: 1.2vw;
-  box-shadow: 0.5vw 0.5vw 0.6vw rgba(0, 0, 0, 0.6);
-  width: 50%;
+  border-radius: 3rem;
+  box-shadow: .5rem .5rem .5rem rgba(0, 0, 0, 0.5);
+  padding: 1.5rem;
+  font-style: italic;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .item h1 {
   text-decoration: underline;
-  margin-bottom: 0.7vw;
-  font-size: 2vw;
+  margin-bottom: .5rem;
+  font-size: 2.2rem;
   text-align: center;
 }
 
 .item p {
-  margin-top: 1vw;
-  font-size: 1.5vw;
-  text-align: justify;
+  margin-top: .5rem;
+  font-size: 1.6rem;
+  text-transform: none;
+  text-align: center;
+  line-height: 1.5;
+  font-weight: 500;
 }
 
 .item p::before {
-  content: '" E';
-}
-
-.item p::after {
-  content: ' "';
+  content: 'Es';
 }
 
 .item p::first-letter,
 .item p:last-child::after {
-  font-size: 2vw;
-  font-weight: bold;
+  font-size: 3rem;
+  font-weight: bolder;
 }
 
 /*FOOTER*/
@@ -367,21 +332,14 @@ header {
 /* FIN KEYFRAMES */
 
 /* MEDIA QUERY */
+@media(max-width:992px) {
 
-
+}
 /* MEDIA 768PX */
-@media(max-width:768px) {
-  html{
-    font-size: 70%;
-  }
-  header{
-    height:70px;
-  }
-  .navbar-brand img{
-    width: 100px;
-    height: 80px;
-  }
+@media(max-width:769px) {
+  
   .circulo{
+    background-color: red;
     top:0;
   }
   .fondoImagen {
@@ -393,9 +351,16 @@ header {
     top: 0;
     left: -6rem;
   }
+  .content{
+    margin-top: 5rem;
+  }
   .fondoImagenDos{
-    width:350px;
-    gap:3rem;
+    width:500px;
+    height:54vh;
+  }
+  .imagen{
+    height: 12rem;
+    width: 12rem;
   }
 }
 
@@ -406,11 +371,9 @@ header {
   html {
     font-size: 60%;
   }
-  header{
-    height:70px;
-  }
-  .navbar-brand img{
-    height: 65px;
+  .circulo{
+    width: 100%;
+    clip-path: circle(43% at right 100%);
   }
   .container-principal{
     justify-content: space-between;
@@ -420,56 +383,63 @@ header {
     width: 270px;
     left: -6rem;
   }
-
+  
   .fondoImagen {
     width: 170px;
     height: 170px;
   }
   .fondoImagenDos{
-    width: 260px;
-    height: 340px;
-    gap:2rem;
+    transform: rotate(0);
+    height: 70vh;
+    align-content: stretch;
   }
   .imagen{
-    width:9rem;
-    height:9rem;
+    transform: rotate(0);
+    width:18.5rem;
+    height:20rem;
   }
 }
 
 @media(max-width:376px) {
-  html{
-  font-size: 45%;
-  }
-  header{
-    height:80px;
-  }
-  .navbar-brand img{
-    width:100px;
-    height: 80px;
-  }
-  .container-principal{
-    justify-content: space-around;
-  }
+
   .circulo{
-    width:90%;
+    width: 100%;
+    clip-path: circle(35% at right 100%);
   }
   .imagenBailarines {
-    width: 210px;
-    top:.5rem;
+    width: 390px;
+    left:-9rem;
+  }
+  .containerLetras h1{
+    font-size: 6rem;
+  }
+  .containerLetras p{
+    font-size: 3rem;
+  }
+  .containerLetras a{
+    font-size: 2rem;
+  }
+  .botonBailes {
+    padding: 1rem 1.5rem;
+    width: 10rem;
+    color: black;
+    
   }
   .fondoImagen {
-    width: 140px;
-    height: 140px;
+    width: 75vw;
+    height: 250px;
+  }
+  .container-principal{
+    flex-direction: column;
+    justify-content: center;
+    gap: 5rem;
   }
   .fondoImagenDos{
-    width: 200px;
-    height: 240px;
-    gap:2rem;
+    width: 95vw;
 
   }
   .imagen{
-    width:8.5rem;
-    height:8.5rem;
+    width:12rem;
+    height:12rem;
   }
-
 }
